Fixing z-index on menu nojs

--- a/wordpress/wp-content/themes/csiangleur/css/main.css
+++ b/wordpress/wp-content/themes/csiangleur/css/main.css
@@ -226,7 +226,8 @@ p {
     width: 100%;
     transition: transform .2s ease-in; }
   .no-js .menu__list {
-    transform: translateX(0px); }
+    transform: translateX(0px);
+    z-index: 11; }
   .no-js .menu__sublist {
     height: auto;
     opacity: 1;
